--- a/manifest.yml
+++ b/manifest.yml
@@ -7,6 +7,6 @@ description: |
   This app will launch an [IQmol] GUI on the [Owens cluster]. You will be able to interact with the IQmol GUI
   through a VNC session.
 
-  [IQmol]: http://iqmol.org/
+  [IQmol]: http://www.iqmol.org/
   [Owens cluster]: https://www.osc.edu/resources/technical_support/supercomputers/owens
  
