--- a/form.yml
+++ b/form.yml
@@ -1,9 +1,11 @@
-cluster: "owens"
+cluster:
+  - "owens"
+  - "owens-slurm"
 form:
-- bc_account
-- bc_num_hours
-- num_cores
-- node_type
+  - bc_account
+  - bc_num_hours
+  - num_cores
+  - node_type
 attributes:
   bc_account:
     label: "Project"
